Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
 
 <ul>
 <li>Année</li>
+<li>Jours ouvrés/non-ouvrés</li>
+<li>Premier jour de la semaine</li>
+<li>Affichage des mois (court / complet)</li>
+<li>Liste des jours fériés (inclus vacances)</li>
 </ul>
 
-<h2>
-<a id="--jours-ouvrésnon-ouvrés" class="anchor" href="#--jours-ouvr%C3%A9snon-ouvr%C3%A9s" aria-hidden="true"><span class="octicon octicon-link"></span></a>- Jours ouvrés/non-ouvrés</h2>
+<h1>
+<a id="captures-décran" class="anchor" href="#captures-d%C3%A9cran" aria-hidden="true"><span class="octicon octicon-link"></span></a>Captures d'écran</h1>
+
+<p><img src="https://github.com/CustomOffice/Calendrier_Paysage/blob/gh-pages/captures/calendrier.png" alt="Vue du calendrier">
+<img src="https://github.com/CustomOffice/Calendrier_Paysage/blob/gh-pages/captures/parametre.png" alt="Vue des paramètres d'affichage"></p>
       </section>
     </div>
 
