--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <h1>
 <a id="captures-décran" class="anchor" href="#captures-d%C3%A9cran" aria-hidden="true"><span class="octicon octicon-link"></span></a>Captures d'écran</h1>
 
-<p><img src="https://github.com/CustomOffice/Calendrier_Paysage/blob/gh-pages/captures/calendrier.png" alt="Vue du calendrier">
-<img src="https://github.com/CustomOffice/Calendrier_Paysage/blob/gh-pages/captures/parametre.png" alt="Vue des paramètres d'affichage"></p>
+<p><img src="https://raw.githubusercontent.com/CustomOffice/Calendrier_Paysage/gh-pages/captures/calendrier.png" alt="Vue du calendrier">
+<img src="https://raw.githubusercontent.com/CustomOffice/Calendrier_Paysage/gh-pages/captures/parametre.png" alt="Vue des paramètres d'affichage"></p>
       </section>
     </div>
 
