--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Calendrier paysage : Calendrier avec quelques options sans macro">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="lytebox.css">
+	<script type="text/javascript" language="javascript" src="lytebox.js"></script>
 
     <title>Calendrier paysage</title>
   </head>
@@ -50,8 +52,11 @@
 <h1>
 <a id="captures-décran" class="anchor" href="#captures-d%C3%A9cran" aria-hidden="true"><span class="octicon octicon-link"></span></a>Captures d'écran</h1>
 
-<p><img src="https://raw.githubusercontent.com/CustomOffice/Calendrier_Paysage/gh-pages/captures/calendrier.png" alt="Vue du calendrier">
-<img src="https://raw.githubusercontent.com/CustomOffice/Calendrier_Paysage/gh-pages/captures/parametre.png" alt="Vue des paramètres d'affichage"></p>
+<p>
+<a href="captures/calendrier.png" class="lytebox"
+   data-lyte-options="group:vacation" data-title="Vue du calendrier">Vue du calendrier</a>
+<a href="captures/parametre.png" class="lytebox" 
+   data-lyte-options="group:vacation" data-title="Vue des paramètres d'affichage">Vue des paramètres d'affichage</a></p>
       </section>
     </div>
 
