--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
 <a id="captures-décran" class="anchor" href="#captures-d%C3%A9cran" aria-hidden="true"><span class="octicon octicon-link"></span></a>Captures d'écran</h1>
 
 <p>
-<a href="captures/calendrier.png" class="lytebox"
-   data-lyte-options="group:vacation" data-title="Vue du calendrier">Vue du calendrier</a>
-<a href="captures/parametre.png" class="lytebox" 
-   data-lyte-options="group:vacation" data-title="Vue des paramètres d'affichage">Vue des paramètres d'affichage</a></p>
+	<a href="captures/calendrier.png" class="lytebox" data-lyte-options="group:vacation" data-title="Vue du calendrier" data-description="">
+		<img src="captures/calendrier.png" alt="Vue du calendrier">
+	</a>
+	<a href="captures/parametre.png" class="lytebox" data-lyte-options="group:vacation" data-title="Vue des paramètres d'affichage" data-description="">
+		<img src="captures/parametre.png" alt="Vue des paramètres d'affichage">
+	</a>
+</p>
       </section>
     </div>
 
