--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="description" content="Calendrier paysage : Calendrier avec quelques options sans macro">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="lytebox.css">
-	<script type="text/javascript" language="javascript" src="lytebox.js"></script>
 
     <title>Calendrier paysage</title>
   </head>
@@ -52,14 +50,15 @@
 <h1>
 <a id="captures-décran" class="anchor" href="#captures-d%C3%A9cran" aria-hidden="true"><span class="octicon octicon-link"></span></a>Captures d'écran</h1>
 
-<p>
-	<a href="captures/calendrier.png" class="lytebox" data-lyte-options="group:vacation" data-title="Vue du calendrier" data-description="">
-		<img src="captures/calendrier.png" alt="Vue du calendrier">
-	</a>
-	<a href="captures/parametre.png" class="lytebox" data-lyte-options="group:vacation" data-title="Vue des paramètres d'affichage" data-description="">
-		<img src="captures/parametre.png" alt="Vue des paramètres d'affichage">
-	</a>
-</p>
+<p><img src="https://raw.githubusercontent.com/CustomOffice/Calendrier_Paysage/gh-pages/captures/calendrier.png" alt="Vue du calendrier">
+<img src="https://raw.githubusercontent.com/CustomOffice/Calendrier_Paysage/gh-pages/captures/parametre.png" alt="Vue des paramètres d'affichage"></p>
+
+<h1>
+<a id="infos-fichiers-" class="anchor" href="#infos-fichiers-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Infos fichiers :</h1>
+
+<p><strong>Logiciel :</strong> Excel 2010<br>
+<strong>Taille :</strong> 45 Ko<br>
+<strong>Extension :</strong> .xlsx </p>
       </section>
     </div>
 
