--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+		  <img src="http://www.custom-office.ch/logo.png" alt="Logo Custom Office" id="logo_perso">
           <a id="forkme_banner" href="https://github.com/CustomOffice/Calendrier_Paysage">View on GitHub</a>
 
           <h1 id="project_title">Calendrier paysage</h1>
